[gd_scene load_steps=37 format=3 uid="uid://chd5j2uijiqsk"]

[ext_resource type="Script" path="res://Scripts/Brewery/PotionNode.gd" id="1_esuby"]
[ext_resource type="Script" path="res://Scripts/Player/PlayerActor.gd" id="1_iiw3q"]
[ext_resource type="Texture2D" uid="uid://cmop7521mralf" path="res://Assets/Sprites/Player/Player-Movement.png" id="2_3s3pf"]
[ext_resource type="Script" path="res://Scripts/Inventory/Inventory.gd" id="2_gb18q"]
[ext_resource type="Script" path="res://Scripts/Player/Statemachine/StateMachine.gd" id="3_5c4cm"]
[ext_resource type="Script" path="res://Scripts/Player/Statemachine/States/IdleState.gd" id="4_33fco"]
[ext_resource type="Script" path="res://Scripts/Player/Statemachine/States/MoveState.gd" id="5_kbtyb"]
[ext_resource type="Script" path="res://Scripts/Player/Statemachine/States/AirState.gd" id="6_xte7u"]
[ext_resource type="PackedScene" uid="uid://cflf8us0xop6g" path="res://Scenes/inv_ui.tscn" id="7_1ogty"]
[ext_resource type="PackedScene" uid="uid://dnd8iqitwbdvp" path="res://Scenes/audio_system.tscn" id="8_28c70"]
[ext_resource type="Resource" uid="uid://cpr7d63h14doa" path="res://Scripts/Brewery/Effects/Draught_of_Ascendance.tres" id="11_af1op"]
[ext_resource type="Script" path="res://Scripts/Effects/LimitedVision.gd" id="14_1vnu4"]
[ext_resource type="Script" path="res://Scripts/Player/HealthManager.gd" id="14_ag4fv"]
[ext_resource type="Texture2D" uid="uid://fher4dstuea7" path="res://Assets/Sprites/Vision.png" id="15_n3wv8"]

[sub_resource type="Resource" id="Resource_1v780"]
script = ExtResource("2_gb18q")
Slots = Array[Resource("res://Scripts/Inventory/InventorySlot.gd")]([])

[sub_resource type="RectangleShape2D" id="RectangleShape2D_05aj4"]
size = Vector2(3.33333, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6lft"]
atlas = ExtResource("2_3s3pf")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mmnku"]
atlas = ExtResource("2_3s3pf")
region = Rect2(0, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wl057"]
atlas = ExtResource("2_3s3pf")
region = Rect2(16, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_36562"]
atlas = ExtResource("2_3s3pf")
region = Rect2(32, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5jlas"]
atlas = ExtResource("2_3s3pf")
region = Rect2(48, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_glh1e"]
atlas = ExtResource("2_3s3pf")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qesc"]
atlas = ExtResource("2_3s3pf")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2c7ls"]
atlas = ExtResource("2_3s3pf")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_awvt5"]
atlas = ExtResource("2_3s3pf")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7wdk"]
atlas = ExtResource("2_3s3pf")
region = Rect2(48, 16, 16, 16)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_03l2y"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0mnbv"]
atlas = SubResource("CompressedTexture2D_03l2y")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4efyj"]
atlas = ExtResource("2_3s3pf")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xgb55"]
atlas = ExtResource("2_3s3pf")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sms53"]
atlas = ExtResource("2_3s3pf")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_47v4w"]
atlas = ExtResource("2_3s3pf")
region = Rect2(48, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ddnw0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6lft")
}],
"loop": true,
"name": &"Fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mmnku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wl057")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36562")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5jlas")
}],
"loop": true,
"name": &"Idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_glh1e")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qesc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2c7ls")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_awvt5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7wdk")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0mnbv")
}],
"loop": true,
"name": &"Sneak",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4efyj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xgb55")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sms53")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_47v4w")
}],
"loop": true,
"name": &"Sprint",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_8613t"]
resource_name = "Drunk"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../Map/AnimationPlayer/blurryvision:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.662745), Color(1, 1, 1, 0.156863), Color(1, 1, 1, 0.662745), Color(1, 1, 1, 0.156863), Color(1, 1, 1, 0.662745)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../Map/AnimationPlayer/blurryvision:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="Animation" id="Animation_j7jin"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../Map/AnimationPlayer/blurryvision:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.431373)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../Map/AnimationPlayer/blurryvision:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xmsxj"]
_data = {
"Drunk": SubResource("Animation_8613t"),
"RESET": SubResource("Animation_j7jin")
}

[node name="PlayerActor" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_iiw3q")
inv = SubResource("Resource_1v780")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.5, -8.25)
scale = Vector2(1.5, 1.5)
shape = SubResource("RectangleShape2D_05aj4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 5
position = Vector2(0, -12)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_ddnw0")
animation = &"Idle"
autoplay = "Idle"
frame_progress = 0.673879

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_5c4cm")
initial_state = NodePath("IdleState")

[node name="IdleState" type="Node" parent="StateMachine"]
script = ExtResource("4_33fco")

[node name="MoveState" type="Node" parent="StateMachine"]
script = ExtResource("5_kbtyb")

[node name="AirState" type="Node" parent="StateMachine"]
script = ExtResource("6_xte7u")

[node name="AudioSystem" parent="." instance=ExtResource("8_28c70")]
scale = Vector2(1.5, 1.5)

[node name="Inv_UI" parent="." instance=ExtResource("7_1ogty")]
offset_left = -67.5
offset_top = -139.5
offset_right = 22.5
offset_bottom = -74.5
metadata/_edit_use_anchors_ = true

[node name="PotionNode" type="Node" parent="."]
script = ExtResource("1_esuby")
effects = Array[Resource("res://Scripts/Brewery/PotionEffect.gd")]([ExtResource("11_af1op"), null, null, null])

[node name="HealthManager" type="Node" parent="."]
script = ExtResource("14_ag4fv")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -21)
zoom = Vector2(4, 4)
process_callback = 0
limit_bottom = 130
drag_left_margin = 0.1
drag_top_margin = 0.1
drag_right_margin = 0.1
drag_bottom_margin = 0.1
editor_draw_limits = true
editor_draw_drag_margin = true
script = ExtResource("14_1vnu4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera2D"]
root_node = NodePath("../../Player/Camera2D")
libraries = {
"": SubResource("AnimationLibrary_xmsxj")
}

[node name="limitedvision" type="TextureRect" parent="Camera2D"]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 1, 0.862745)
z_index = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -280.0
offset_top = -160.0
offset_right = 280.0
offset_bottom = 155.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("15_n3wv8")
expand_mode = 5
